# BirdNET-Analyzer

./: analyzePipelined.py  config.py  pyproject.toml  scratchpad.ipynb
birdnet_analyzer/: analyzePipelined.py
