[tool.poetry]
name = "birdnet-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = {version = "2.15.1", extras = ["and-cuda"]}
tensorflow-io = "0.36.*"
librosa = "^0.10.2.post1"
resampy = "^0.4.3"
tensorflow-metal = {version = "^1.1.0", platform = "darwin"}
tensorflow-datasets = "^4.9.6"
pyflac = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
